--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
       let title = new Gltf2Node({url: 'media/gltf/text/text.gltf'});
       arObject.addNode(title);
 
-      let flower = new Gltf2Node({url: 'media/gltf/viking_room/viking_room.gltf'});
+      //let flower = new Gltf2Node({url: 'media/gltf/viking_room/viking_room.gltf'});
+      //arObject.addNode(flower);
+
+      
+      let flower = new Gltf2Node({url: 'media/gltf/replacemodel.glb'});
       arObject.addNode(flower);
 
       let reticle = new Gltf2Node({url: 'media/gltf/reticle/reticle1.gltf'});
